editing icon position

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <div class="mode_container whiteSpacing">
     <div class="modeChange">
-        <i class="fa-solid fa-moon moon" onclick="Mode()"></i>
-        <i class="fa-solid fa-sun sun" onclick="Mode()" style="color: #f1f5f9; display: none;"></i>
+        <i class="fa-solid fa-moon moon" onclick="Mode()" style="display: block;"></i>
+        <i class="fa-solid fa-sun sun" onclick="Mode()" style="color: #f1f5f9;display: none;"></i>
     </div>
     <div class="myProfile">
         <div class="myProfile_left">
